log

lu., 14 de ago. de 2023 12:12:54: 
 tests:  0|7
total_score: 0/70
d2daefb
mi., 16 de ago. de 2023 22:48:51: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
1fa52c1
mi., 16 de ago. de 2023 22:49:35: 
 exercises.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
c6dfd6d
ju., 17 de ago. de 2023 16:10:10: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:1:0:
exercises.c: In function 'reverseArray':
exercises.c:40:9: error: unused variable 'aux' [-Werror=unused-variable]
     int aux = arr[posI];
         ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
20bcece
ju., 17 de ago. de 2023 16:17:09: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 20/70
ec82bb8
ju., 17 de ago. de 2023 17:01:58: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:76:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
c0b5b2a
ju., 17 de ago. de 2023 17:04:10: 
 exercises.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:76:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
997aa71
ju., 17 de ago. de 2023 17:05:04: 
 exercises.c | 41 +----------------------------------------
 1 file changed, 1 insertion(+), 40 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:61:10: error: 'null' undeclared (first use in this function)
   return null;
          ^~~~
exercises.c:61:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d87b138
ju., 17 de ago. de 2023 17:05:30: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
1aa46b6
ju., 17 de ago. de 2023 21:17:10: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:61:8: error: unused variable 'ptrPares' [-Werror=unused-variable]
   int* ptrPares = NULL; // Puntero al nuevo arreglo, donde van los pares
        ^~~~~~~~
exercises.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7c7037e
ju., 17 de ago. de 2023 21:29:03: 
 exercises.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
32adc6f
ju., 17 de ago. de 2023 21:30:26: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|4
total_score: 30/70
4046e64
ju., 17 de ago. de 2023 21:31:43: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:98:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return aux;
          ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
c7c9979
